# systemsetup

./: LICENSE  README.md  example.ipynb  pyproject.toml  readme.txt  setup.py
my_basic_project.egg-info/: PKG-INFO  SOURCES.txt
sampleproject.egg-info/: PKG-INFO  SOURCES.txt
