[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_basic_project"
version = "0.1.0"
description="A brief description of my basic project"
readme="README.md"
license={file="License"}
authors=[
    {name="Meena", email="meenatchisundarimuthirulappan@gmail.com"}
]
dependencies = [
  "requests>=2.25",
  "numpy>=1.20"]

[project.urls]

Repository = "https://github.com/Meenatchisundari/systemsetup.git"

